--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
+sudo: false
 language: android
+android:
+  components:
+    - build-tools-19.0.3
+    - android-19
+    - sys-img-armeabi-v7a-android-19
+    - extra
+    - add-on
 env:
   matrix:
-    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
-before_install:
+    - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+before_script:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-before_script:
-  - ./ci/wait_for_emulator
+  - android-wait-for-emulator
   - adb shell input keyevent 82 &
