--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ env:
     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
 before_install:
   # Workaround to Docker symlink issue ???
-  - export ANDROID_HOME=/usr/local/android-sdk-23
+  - export ANDROID_HOME=/usr/local/android-sdk-23/
+  - "export PATH=${ANDROID_HOME}tools:${ANDROID_HOME}platform-tools:${PATH}
   - "android-update-sdk --components='android-19'"
   - "android-update-sdk --components='sys-img-armeabi-v7a-android-19'"
   - "android-update-sdk --components='extra'"
