--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# Payload trigger, go again
 sudo: false
 language: android
 android:
@@ -11,13 +10,10 @@ android:
 env:
   matrix:
     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
-before_install:
-  # Workaround to Docker symlink issue ???
-  - export ANDROID_HOME=/usr/local/android-sdk-23/
-  - "export PATH=${ANDROID_HOME}tools:${ANDROID_HOME}platform-tools:${PATH}"
-  - "android-update-sdk --components='android-19'"
-  - "android-update-sdk --components='sys-img-armeabi-v7a-android-19'"
-  - "android-update-sdk --components='extra'"
+#before_install:
+#  # Workaround to Docker symlink issue ???
+#  - export ANDROID_HOME=/usr/local/android-sdk-23/
+#  - "export PATH=${ANDROID_HOME}tools:${ANDROID_HOME}platform-tools:${PATH}"
 before_script:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
