--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: android
 android:
   components:
     - build-tools-19.0.3
-#    - android-19
+    - android-19
 #    - sys-img-armeabi-v7a-android-19
 #    - extra
 #    - add-on
