--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-# Payload trigger 1
-sudo: false
+# use staging environment
+group: dev
+
+sudo: true
 language: android
 android:
   components:
@@ -11,13 +13,6 @@ android:
 env:
   matrix:
     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
-before_install:
-  # Workaround to Docker symlink issue ???
-  - export ANDROID_HOME=/usr/local/android-sdk-23/
-  - "export PATH=${ANDROID_HOME}tools:${ANDROID_HOME}platform-tools:${PATH}
-  - "android-update-sdk --components='android-19'"
-  - "android-update-sdk --components='sys-img-armeabi-v7a-android-19'"
-  - "android-update-sdk --components='extra'"
 before_script:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
