--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ android:
 env:
   matrix:
     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+
+before_install:
+  # manually inspect the system
+  - cat /usr/share/travis/system_info
+
 before_script:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
