--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
-sudo: false
+sudo: required
+dist: trusty
+group: edge
+
+language: java
+jdk: oraclejdk9
+
+env:
+  global:
+    - MAVEN_SKIP_RC=true
+  matrix:
+    - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+
 language: android
 android:
   components:
@@ -7,15 +19,10 @@ android:
 #    - sys-img-armeabi-v7a-android-19
 #    - extra
 #    - add-on
-env:
-  matrix:
-    - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
-#before_install:
-#  # Workaround to Docker symlink issue ???
-#  - export ANDROID_HOME=/usr/local/android-sdk-23/
-#  - "export PATH=${ANDROID_HOME}tools:${ANDROID_HOME}platform-tools:${PATH}"
+
 before_script:
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+
