--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   matrix:
     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
 
-language: android
+#language: android
 jdk:
   - oraclejdk7
   - oraclejdk8
